# GameLauncherGen

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/common/: CMakeLists.txt
src/common/include/: CRC32.h  CommonTypes.h  PackagePacker.h  XorCrypto.h
src/common/src/: CRC32.cpp  PackagePacker.cpp  XorCrypto.cpp
src/extension_dll/: CMakeLists.txt  ExtensionDLL.def
src/extension_dll/include/: ExtensionAPI.h
src/extension_dll/src/: DllMain.cpp  Extension.def  ExtensionAPI.cpp
src/generator/: CMakeLists.txt
src/generator/include/: ConfigData.h  GeneratorApp.h  MainDlg.h  PatchBuilder.h  ResourceEmbedder.h
src/generator/res/: Generator.rc  resource.h
src/generator/src/: ConfigData.cpp  GeneratorApp.cpp  MainDlg.cpp  PatchBuilder.cpp  ResourceEmbedder.cpp
src/launcher_template/: CMakeLists.txt
src/launcher_template/include/: DllInjector.h  LauncherUtils.h  ProcessLauncher.h  ServerConfig.h
src/launcher_template/src/: DllInjector.cpp  LauncherUtils.cpp  Main.cpp  ProcessLauncher.cpp  ServerConfig.cpp
